# high-performance-linear-algebra

./: CMakeLists.txt  README.md
matrix-multiplication/: atlas_blocked_matrix_mul.c  blas_matrix_mul.c  blas_mul.c  matrix_mul.c  no_mul_norm.c  sample_parallel_sum.c  serial_matrix_mul.c  simple_matrix_mul.c  simple_parallel_matrix_mul.c  simple_parallel_norm.c  simple_parallel_sum.c  simple_pthread.c  simple_pthread_matrix_mul.c  simple_pthread_norm.c  simple_serial_mul.c
matrix-multiplication/test-programs/: simple_atlas_blocking_test.c  simple_atlas_test.c  simple_blas_test.c
matrix-multiplication/testing/: simple_serial_mul.c
matrix-multiplication/testing-openmp/: simple_parallel_matrix_mul.c
